test/conformance/chainsaw/validate/clusterpolicy/cornercases/variable-substitution-failure-messages/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: ba
  namespace: test
  labels:
    app: nginx-users
spec:
  securityContext:
    runAsUser: 115
  containers:
    - name: notnginx
      image: nothingherenginx
      securityContext:
        runAsUser: 250
