test/conformance/chainsaw/validate/clusterpolicy/cornercases/variable-substitution-failure-messages/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: variable-substitution-failure-messages
spec:
  concurrent: false
  steps:
  - name: create policy
    use:
      template: ../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: uid-groups-fsgroup-validate
  - name: step-02  
    try:  
    - script:  
        content: kubectl apply -f pod.yaml  
        check:  
          ($error != null): true
          # This check ensures the contents of stderr are exactly as shown.  
          (trim_space($stderr)): |-
            Error from server: error when creating "pod.yaml": admission webhook "validate.kyverno.svc-fail" denied the request: 

            resource Pod/default/ba was blocked due to the following policies 

            uid-groups-fsgroup-validate:
              check-runasuser: 'validation error: Running with specific user IDs 9999 | 4000.
                The fields spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
                spec.initContainers[*].securityContext.runAsGroup, and spec.ephemeralContainers[*].securityContext.runAsGroup
                must be set to one of the 9999 | 4000 values. rule check-runasuser[0] failed at
                path /spec/containers/0/securityContext/runAsUser/ rule check-runasuser[1] failed
                at path /spec/containers/0/securityContext/runAsUser/'
